fixed alignment

--- a/public/style/style.less
+++ b/public/style/style.less
@@ -303,9 +303,9 @@ td { vertical-align: top; padding-right: 5px; }
 
 .ribbon {
   width: 99%;
-  margin-left: -6px;
-  position: absolute;
-  bottom:2px;
+  //margin-left: -6px;
+  //position: absolute;
+  //bottom:2px;
   text-align: center;
   font-size: 0.7em!important;
   background: #4cd468;
